--- a/static/jsCss/detail.css
+++ b/static/jsCss/detail.css
@@ -300,3 +300,13 @@ body {
   background-color: orange;
   margin-left: 7px;
 }
+.info-image.img {
+  justify-content: center;
+  width: 300px;
+  height: 300px;
+}
+.info-image.video {
+  justify-content: center;
+  width: 300;
+  height: 300;
+}
