--- a/templates/list.html
+++ b/templates/list.html
@@ -73,7 +73,7 @@
           <button class="app-content-headerButton" onclick="window.location.href='/post'">Add Image</button>
         </div>
         <div class="app-content-actions">
-          <input class="search-bar" placeholder="Search for title" type="text">
+          <input class="search-bar" placeholder="Search for title" type="text" >
           <div class="app-content-actions-wrapper">
             <div class="filter-button-wrapper">
               <button class="action-button filter jsFilter"><span>Filter</span><span class="iconify" data-icon="line-md:image-twotone" data-width="24" data-height="24"></span></button>
@@ -176,9 +176,9 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     ></script>
+    <script src="https://code.jquery.com/jquery-3.6.0.slim.js" integrity="sha256-HwWONEZrpuoh951cQD1ov2HUK5zA5DwJ1DNUXaM6FsY=" crossorigin="anonymous"></script>
     <script src="{% static 'bootstrap/js/bootstrap.min.js' %}"></script>
     <script src="https://code.iconify.design/2/2.2.1/iconify.min.js"></script>
     <script src="{% static 'jsCss/list.js'%}"></script>
   <body/>
-
 </html>
